[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent-fault-tolerance"
version = "0.1.0"
description = "Confidence probing-based weighted Byzantine fault-tolerant consensus for LLM multi-agent systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "G-project" }]
keywords = ["multi-agent", "byzantine-fault-tolerance", "llm", "consensus"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
cp-wbft = "cp_wbft.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
